// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`solveMacro — golden snapshots > matches the "Asian financial crisis 1998" preset snapshot 1`] = `
{
  "drivers": {
    "commod": -28,
    "debtRatio": 70,
    "deficit": 6.5,
    "dxy": 15,
    "fxDebt": 36,
    "gG": 2.5,
    "i": 30,
    "iFed": 5.5,
    "informal": 58,
    "oil": -35,
    "piG": 2.2,
    "pie": 16,
    "prod": -1.5,
    "reserves": 1.6,
    "riskOn": 6,
    "shock": 10,
    "subsidy": 80,
    "target": 5,
    "w": 12,
  },
  "flowNarrative": "Sudden stop. Capital leaves regardless of valuation; only dollar liquidity matters. The central bank loses control of domestic rates and must defend the currency instead.",
  "instruments": [
    {
      "beta": -0.5,
      "category": "Global",
      "driver": "Fed funds rate, safe haven",
      "flag": null,
      "name": "US Treasuries (UST)",
      "realReturnPct": 23.7011977728,
      "sentiment": 98.48191643648,
    },
    {
      "beta": -0.1,
      "category": "Domestic",
      "driver": "Domestic real rate",
      "flag": null,
      "name": "IDR deposits",
      "realReturnPct": 23.032395545600004,
      "sentiment": 88.96383287296001,
    },
    {
      "beta": -0.7,
      "category": "Global",
      "driver": "Fed funds rate, FX",
      "flag": null,
      "name": "USD cash",
      "realReturnPct": 22.431197772800004,
      "sentiment": 100,
    },
    {
      "beta": 0.2,
      "category": "Domestic",
      "driver": "Yield curve, fiscal risk",
      "flag": null,
      "name": "Government bonds (SBN)",
      "realReturnPct": 22.15183287296,
      "sentiment": 81.218932596736,
    },
    {
      "beta": -0.4,
      "category": "Global",
      "driver": "Global real rate (inverse)",
      "flag": null,
      "name": "Gold",
      "realReturnPct": 18.441197772800002,
      "sentiment": 87.95391643648001,
    },
    {
      "beta": 0.9,
      "category": "Global",
      "driver": "Global growth, FX",
      "flag": null,
      "name": "Global equities (DM)",
      "realReturnPct": 18.281197772800006,
      "sentiment": 60.241916436480004,
    },
    {
      "beta": 0.7,
      "category": "Global",
      "driver": "Terms of trade, global cycle",
      "flag": null,
      "name": "Commodities & energy",
      "realReturnPct": -5.968802227199999,
      "sentiment": 25.665916436480003,
    },
    {
      "beta": 1.6,
      "category": "Global",
      "driver": "Global liquidity, risk appetite",
      "flag": null,
      "name": "Crypto (BTC)",
      "realReturnPct": -39.418802227200004,
      "sentiment": 0,
    },
    {
      "beta": 0.4,
      "category": "Domestic",
      "driver": "Rent, mortgage rates",
      "flag": null,
      "name": "Property",
      "realReturnPct": -74.44193144064002,
      "sentiment": 0,
    },
    {
      "beta": 1,
      "category": "Domestic",
      "driver": "Nominal earnings, foreign flow",
      "flag": null,
      "name": "Indonesian equities (IHSG)",
      "realReturnPct": -94.94171792000003,
      "sentiment": 0,
    },
  ],
  "portfolio": {
    "investorScore": -100,
    "realReturnPct": -20.723065519424008,
  },
  "regime": {
    "regime": "Disinflationary recession",
    "regimeNote": "Weak demand is pushing prices down; there is room to ease.",
  },
  "stakeholders": [
    {
      "key": "cb",
      "mechanism": "The third mandate takes over: FX stability. Rates must rise to stem outflows even when domestic conditions don't call for it — this is what separates an emerging-market central bank from the Fed.",
      "name": "Central bank",
      "score": -100,
      "stats": [
        {
          "label": "Deviation from target",
          "tone": "positive",
          "value": "+1.2 pp",
        },
        {
          "label": "Credibility",
          "sub": "from expectation anchoring",
          "value": "0/100",
        },
        {
          "label": "Taylor rule",
          "sub": "actual 30.0%",
          "tone": "positive",
          "value": "-20.0%",
        },
        {
          "label": "FX stress",
          "tone": "negative",
          "value": "44.9",
        },
      ],
      "subtitle": "Prices, output, and FX stability",
    },
    {
      "key": "bank",
      "mechanism": "Asset quality becomes the dominant problem. Loan-loss provisioning eats capital faster than net interest margin can rebuild it, and banks start rationing credit.",
      "name": "Commercial banks",
      "score": -100,
      "stats": [
        {
          "label": "Net interest margin",
          "value": "5.5%",
        },
        {
          "label": "Cost of funds",
          "value": "33.6%",
        },
        {
          "label": "Real credit growth",
          "value": "-20.0%",
        },
        {
          "label": "NPL ratio",
          "tone": "negative",
          "value": "30.0%",
        },
      ],
      "subtitle": "Margin, volume, asset quality",
    },
    {
      "key": "corp",
      "mechanism": "FX debt is the main problem here, not operating margin. Depreciation hits the balance sheet faster than export revenue can offset it.",
      "name": "Corporates",
      "score": -100,
      "stats": [
        {
          "label": "Nominal revenue growth",
          "value": "-49.9%",
        },
        {
          "label": "Labor cost",
          "sub": "ULC +13.5%",
          "value": "+7.4 pp",
        },
        {
          "label": "Import + energy cost",
          "tone": "negative",
          "value": "+2.2 pp",
        },
        {
          "label": "Rent & land cost",
          "value": "-1.7 pp",
        },
        {
          "label": "FX debt hit",
          "tone": "negative",
          "value": "+19.7 pp",
        },
        {
          "label": "Margin change",
          "tone": "negative",
          "value": "-62.7 pp",
        },
      ],
      "subtitle": "Margin, input costs, FX debt burden",
    },
    {
      "key": "gov",
      "mechanism": "The deficit has crossed the market’s comfort line. SBN issuance rises just as foreign demand falls, so yields rise and the interest bill grows with them.",
      "name": "Government",
      "score": -100,
      "stats": [
        {
          "label": "Actual deficit",
          "tone": "negative",
          "value": "27.4%",
        },
        {
          "label": "Energy subsidy cost",
          "tone": "positive",
          "value": "1.5% GDP",
        },
        {
          "label": "Interest burden",
          "tone": "negative",
          "value": "24.8% GDP",
        },
        {
          "label": "Next year's debt ratio",
          "sub": "now 70.0%",
          "tone": "negative",
          "value": "132.3%",
        },
      ],
      "subtitle": "Budget, debt, subsidies",
    },
    {
      "key": "inv",
      "mechanism": "High global real rates weigh on every long-duration asset. Gold and crypto are hit hardest because they have no cash flow to defend themselves with.",
      "name": "Investors",
      "score": -100,
      "stats": [
        {
          "label": "Best instrument",
          "tone": "positive",
          "value": "US Treasuries",
        },
        {
          "label": "Worst instrument",
          "tone": "negative",
          "value": "Indonesian equities",
        },
        {
          "label": "Blended portfolio",
          "tone": "negative",
          "value": "-20.7%",
        },
        {
          "label": "Global real rate",
          "value": "+3.3%",
        },
      ],
      "subtitle": "Real IDR return and sentiment",
    },
    {
      "key": "people",
      "mechanism": "Open unemployment stays low only because people shift into the informal sector, not because the labor market is healthy. What rises is underemployment and precarious work.",
      "name": "Households",
      "score": -100,
      "stats": [
        {
          "label": "Felt inflation",
          "sub": "official 6.2%",
          "tone": "positive",
          "value": "5.8%",
        },
        {
          "label": "Effective real wage",
          "tone": "positive",
          "value": "+6.2%",
        },
        {
          "label": "Rent vs wages",
          "tone": "positive",
          "value": "-29.5 pp",
        },
        {
          "label": "Unemployment",
          "sub": "underemployment 131.0%",
          "value": "27.8%",
        },
        {
          "label": "Consumer loan rate",
          "value": "33.5%",
        },
        {
          "label": "Real savings return",
          "tone": "positive",
          "value": "+23.0%",
        },
      ],
      "subtitle": "Purchasing power, jobs, cost of living",
    },
  ],
  "state": {
    "costCapital": 2.6782395545600006,
    "costGrowth": 12.760549109504,
    "costImport": 2.22976044544,
    "costLabor": 7.425000000000001,
    "costOfFunds": 33.6,
    "costRent": -1.748612449536001,
    "cpiBottom": 5.825311085273597,
    "credibility": 0,
    "debtNext": 132.3230519513728,
    "deficitActual": 27.3761725254528,
    "feltGap": -0.392293369126401,
    "flow": -100,
    "flowParts": [
      {
        "contribution": 81.92958218240001,
        "label": "Real carry (domestic vs global real rate)",
        "raw": "+20.5 pp",
      },
      {
        "contribution": -175.92515376000003,
        "label": "Growth differential",
        "raw": "-58.6 pp",
      },
      {
        "contribution": -35.2,
        "label": "Global risk appetite",
        "raw": "6/100",
      },
      {
        "contribution": -33,
        "label": "Dollar strength (DXY)",
        "raw": "+15.0%",
      },
      {
        "contribution": -1.6799999999999997,
        "label": "Net terms of trade",
        "raw": "-2.1 idx",
      },
      {
        "contribution": -8.8,
        "label": "FX reserve adequacy",
        "raw": "1.6 mo",
      },
      {
        "contribution": -16.8,
        "label": "Corporate FX debt",
        "raw": "36.0% GDP",
      },
      {
        "contribution": -0,
        "label": "Domestic nominal stability",
        "raw": "gap +1.2 pp",
      },
    ],
    "foodInfl": 25.20306786368,
    "fuelPrice": 0.7039281336319999,
    "fxDebtHit": 19.654993870848,
    "fxStress": 44.87856267264,
    "g": -56.14171792000001,
    "gPot": 1.9,
    "gap": -58.04171792000001,
    "idr": -23.3988022272,
    "interestBurden": 24.825696935424,
    "jobGrowth": -31.07794485600001,
    "kpr": 33.5,
    "marginDelta": -62.684662575104014,
    "nim": 5.482640668159999,
    "nomRev": -49.924113465600016,
    "npl": 30,
    "pi": 6.217604454399998,
    "piGap": 1.2176044543999982,
    "r": 14,
    "rEx": 23.782395545600004,
    "rG": 3.3,
    "realCredit": -20,
    "realWage": 5.782395545600002,
    "realWageFelt": 6.174688914726403,
    "rentBurden": -29.48612449536001,
    "rentGrowth": -17.48612449536001,
    "savingsReal": 23.032395545600004,
    "sbnYield": 35.46528133632,
    "spendingWeightSource": "default",
    "subsidyCost": 1.4615712534528,
    "taylor": -19.994452278400008,
    "u": 27.833611829728007,
    "ulc": 13.5,
    "underemp": 131.039264048,
  },
}
`;

exports[`solveMacro — golden snapshots > matches the "Deflation & liquidity trap" preset snapshot 1`] = `
{
  "drivers": {
    "commod": -28,
    "debtRatio": 40,
    "deficit": 5,
    "dxy": 0,
    "fxDebt": 12,
    "gG": 1,
    "i": 0.5,
    "iFed": 0.5,
    "informal": 58,
    "oil": -35,
    "piG": 0.5,
    "pie": 0.2,
    "prod": 1,
    "reserves": 6.5,
    "riskOn": 45,
    "shock": -3,
    "subsidy": 60,
    "target": 2,
    "w": 0,
  },
  "flowNarrative": "Neutral positioning. Allocation to Indonesia tracks index weight rather than active conviction. The next move depends on who moves first: the Fed or Bank Indonesia.",
  "instruments": [
    {
      "beta": -0.4,
      "category": "Global",
      "driver": "Global real rate (inverse)",
      "flag": null,
      "name": "Gold",
      "realReturnPct": 5.69708124,
      "sentiment": 60.075329984,
    },
    {
      "beta": 0.4,
      "category": "Domestic",
      "driver": "Rent, mortgage rates",
      "flag": null,
      "name": "Property",
      "realReturnPct": 5.0999663,
      "sentiment": 57.19994608,
    },
    {
      "beta": 0.2,
      "category": "Domestic",
      "driver": "Yield curve, fiscal risk",
      "flag": null,
      "name": "Government bonds (SBN)",
      "realReturnPct": 3.80643106,
      "sentiment": 55.610289696,
    },
    {
      "beta": 0.9,
      "category": "Global",
      "driver": "Global growth, FX",
      "flag": null,
      "name": "Global equities (DM)",
      "realReturnPct": 3.5970812400000005,
      "sentiment": 53.595329984,
    },
    {
      "beta": -0.5,
      "category": "Global",
      "driver": "Fed funds rate, safe haven",
      "flag": null,
      "name": "US Treasuries (UST)",
      "realReturnPct": 2.89708124,
      "sentiment": 55.835329984000005,
    },
    {
      "beta": -0.1,
      "category": "Domestic",
      "driver": "Domestic real rate",
      "flag": null,
      "name": "IDR deposits",
      "realReturnPct": 1.743898,
      "sentiment": 53.030236800000004,
    },
    {
      "beta": -0.7,
      "category": "Global",
      "driver": "Fed funds rate, FX",
      "flag": null,
      "name": "USD cash",
      "realReturnPct": 1.44708124,
      "sentiment": 53.995329984,
    },
    {
      "beta": 1.6,
      "category": "Global",
      "driver": "Global liquidity, risk appetite",
      "flag": null,
      "name": "Crypto (BTC)",
      "realReturnPct": 0.6970812399999999,
      "sentiment": 47.275329983999995,
    },
    {
      "beta": 1,
      "category": "Domestic",
      "driver": "Nominal earnings, foreign flow",
      "flag": null,
      "name": "Indonesian equities (IHSG)",
      "realReturnPct": -0.9929282399999984,
      "sentiment": 46.011314816,
    },
    {
      "beta": 0.7,
      "category": "Global",
      "driver": "Terms of trade, global cycle",
      "flag": null,
      "name": "Commodities & energy",
      "realReturnPct": -22.55291876,
      "sentiment": 12.235329983999996,
    },
  ],
  "portfolio": {
    "investorScore": 22.786978563,
    "realReturnPct": 2.5318865070000003,
  },
  "regime": {
    "regime": "Deflation",
    "regimeNote": "Real rates rise automatically even as nominal rates are pushed to zero.",
  },
  "stakeholders": [
    {
      "key": "cb",
      "mechanism": "Real rates rise automatically even at a zero nominal rate. Remaining tools: quantitative easing, forward guidance, fiscal coordination.",
      "name": "Central bank",
      "score": 19.586298796788007,
      "stats": [
        {
          "label": "Deviation from target",
          "tone": "negative",
          "value": "-4.0 pp",
        },
        {
          "label": "Credibility",
          "sub": "from expectation anchoring",
          "value": "78/100",
        },
        {
          "label": "Taylor rule",
          "sub": "actual 0.5%",
          "tone": "positive",
          "value": "-0.7%",
        },
        {
          "label": "FX stress",
          "tone": "positive",
          "value": "0.0",
        },
      ],
      "subtitle": "Prices, output, and FX stability",
    },
    {
      "key": "bank",
      "mechanism": "The worst case. Collateral values fall, borrowers’ real debt burden rises, NPLs spike, and margins are squeezed against the deposit-rate floor.",
      "name": "Commercial banks",
      "score": -4.7144619200000015,
      "stats": [
        {
          "label": "Net interest margin",
          "value": "2.1%",
        },
        {
          "label": "Cost of funds",
          "value": "1.1%",
        },
        {
          "label": "Real credit growth",
          "value": "+13.1%",
        },
        {
          "label": "NPL ratio",
          "tone": "negative",
          "value": "7.2%",
        },
      ],
      "subtitle": "Margin, volume, asset quality",
    },
    {
      "key": "corp",
      "mechanism": "Selling prices fall faster than fixed costs and sticky nominal wages. Nominal debt becomes heavier in real terms.",
      "name": "Corporates",
      "score": 23.008916360000008,
      "stats": [
        {
          "label": "Nominal revenue growth",
          "value": "+4.7%",
        },
        {
          "label": "Labor cost",
          "sub": "ULC -1.0%",
          "value": "-0.6 pp",
        },
        {
          "label": "Import + energy cost",
          "tone": "positive",
          "value": "-2.5 pp",
        },
        {
          "label": "Rent & land cost",
          "value": "+0.2 pp",
        },
        {
          "label": "FX debt hit",
          "tone": "positive",
          "value": "+0.0 pp",
        },
        {
          "label": "Margin change",
          "tone": "positive",
          "value": "+7.6 pp",
        },
      ],
      "subtitle": "Margin, input costs, FX debt burden",
    },
    {
      "key": "gov",
      "mechanism": "The debt ratio is rising: nominal growth isn’t enough to outrun the deficit. The snowball dynamic starts working against the government.",
      "name": "Government",
      "score": 11.2736448,
      "stats": [
        {
          "label": "Actual deficit",
          "tone": "negative",
          "value": "4.2%",
        },
        {
          "label": "Energy subsidy cost",
          "tone": "positive",
          "value": "0.9% GDP",
        },
        {
          "label": "Interest burden",
          "tone": "positive",
          "value": "0.7% GDP",
        },
        {
          "label": "Next year's debt ratio",
          "sub": "now 40.0%",
          "tone": "negative",
          "value": "42.4%",
        },
      ],
      "subtitle": "Budget, debt, subsidies",
    },
    {
      "key": "inv",
      "mechanism": "Cash and nominal bonds win; equities, property, and crypto lose. Real cash returns are positive without taking any risk at all.",
      "name": "Investors",
      "score": 22.786978563,
      "stats": [
        {
          "label": "Best instrument",
          "tone": "positive",
          "value": "Gold",
        },
        {
          "label": "Worst instrument",
          "tone": "negative",
          "value": "Commodities & energy",
        },
        {
          "label": "Blended portfolio",
          "tone": "positive",
          "value": "+2.5%",
        },
        {
          "label": "Global real rate",
          "value": "+0.0%",
        },
      ],
      "subtitle": "Real IDR return and sentiment",
    },
    {
      "key": "people",
      "mechanism": "Felt inflation of -0.8% is far above the official -2.0%, because food and rent take up a much larger share of a lower-income household budget. This is the source of the gap between the data and how people experience it.",
      "name": "Households",
      "score": 9.878374896,
      "stats": [
        {
          "label": "Felt inflation",
          "sub": "official -2.0%",
          "tone": "negative",
          "value": "-0.8%",
        },
        {
          "label": "Effective real wage",
          "tone": "positive",
          "value": "+0.8%",
        },
        {
          "label": "Rent vs wages",
          "tone": "negative",
          "value": "+1.7 pp",
        },
        {
          "label": "Unemployment",
          "sub": "underemployment 20.8%",
          "value": "4.3%",
        },
        {
          "label": "Consumer loan rate",
          "value": "4.0%",
        },
        {
          "label": "Real savings return",
          "tone": "positive",
          "value": "+1.7%",
        },
      ],
      "subtitle": "Purchasing power, jobs, cost of living",
    },
  ],
  "state": {
    "costCapital": 0.5493898,
    "costGrowth": -2.9783083799999996,
    "costImport": -2.45,
    "costLabor": -0.55,
    "costOfFunds": 1.1,
    "costRent": 0.17016612000000003,
    "cpiBottom": -0.803637216,
    "credibility": 78.4,
    "debtNext": 42.3538092,
    "deficitActual": 4.21425,
    "feltGap": 1.190260784,
    "flow": 6.248898000000002,
    "flowParts": [
      {
        "contribution": 9.975591999999999,
        "label": "Real carry (domestic vs global real rate)",
        "raw": "+2.5 pp",
      },
      {
        "contribution": 16.935000000000002,
        "label": "Growth differential",
        "raw": "+5.6 pp",
      },
      {
        "contribution": -4,
        "label": "Global risk appetite",
        "raw": "45/100",
      },
      {
        "contribution": -0,
        "label": "Dollar strength (DXY)",
        "raw": "+0.0%",
      },
      {
        "contribution": -1.6799999999999997,
        "label": "Net terms of trade",
        "raw": "-2.1 idx",
      },
      {
        "contribution": 1,
        "label": "FX reserve adequacy",
        "raw": "6.5 mo",
      },
      {
        "contribution": -0,
        "label": "Corporate FX debt",
        "raw": "12.0% GDP",
      },
      {
        "contribution": -15.981694,
        "label": "Domestic nominal stability",
        "raw": "gap -4.0 pp",
      },
    ],
    "foodInfl": -3.0942600000000002,
    "fuelPrice": -1.4000000000000001,
    "fxDebtHit": 0,
    "fxStress": 0,
    "g": 6.6450000000000005,
    "gPot": 4.4,
    "gap": 2.245,
    "idr": 0.79681676,
    "interestBurden": 0.725013224,
    "jobGrowth": 3.45475,
    "kpr": 4,
    "marginDelta": 7.62941038,
    "nim": 2.11,
    "nomRev": 4.651102000000001,
    "npl": 7.157609300000001,
    "pi": -1.993898,
    "piGap": -3.9938979999999997,
    "r": 0.3,
    "rEx": 2.4938979999999997,
    "rG": 0,
    "realCredit": 13.108546900000002,
    "realWage": 1.993898,
    "realWageFelt": 0.803637216,
    "rentBurden": 1.7016612000000002,
    "rentGrowth": 1.7016612000000002,
    "savingsReal": 1.743898,
    "sbnYield": 1.81253306,
    "spendingWeightSource": "default",
    "subsidyCost": 0.9,
    "taylor": -0.6683469999999994,
    "u": 4.341317,
    "ulc": -1,
    "underemp": 20.759999999999998,
  },
}
`;

exports[`solveMacro — golden snapshots > matches the "Fed hawkish 2022" preset snapshot 1`] = `
{
  "drivers": {
    "commod": 85,
    "debtRatio": 40,
    "deficit": 2.5,
    "dxy": 14,
    "fxDebt": 12,
    "gG": 2,
    "i": 5.75,
    "iFed": 5,
    "informal": 58,
    "oil": 55,
    "piG": 8,
    "pie": 4.2,
    "prod": 1.6,
    "reserves": 6.5,
    "riskOn": 25,
    "shock": 0,
    "subsidy": 60,
    "target": 3,
    "w": 5.5,
  },
  "flowNarrative": "Outflows. SBN is trimmed first because it is most liquid, pushing yields up and the rupiah down together — a correlation that compounds losses for foreign holders.",
  "instruments": [
    {
      "beta": 0.7,
      "category": "Global",
      "driver": "Terms of trade, global cycle",
      "flag": null,
      "name": "Commodities & energy",
      "realReturnPct": 62.27413544254141,
      "sentiment": 100,
    },
    {
      "beta": -0.4,
      "category": "Global",
      "driver": "Global real rate (inverse)",
      "flag": null,
      "name": "Gold",
      "realReturnPct": 17.674135442541395,
      "sentiment": 83.07861670806624,
    },
    {
      "beta": -0.7,
      "category": "Global",
      "driver": "Fed funds rate, FX",
      "flag": null,
      "name": "USD cash",
      "realReturnPct": 5.724135442541392,
      "sentiment": 67.55861670806622,
    },
    {
      "beta": 0.9,
      "category": "Global",
      "driver": "Global growth, FX",
      "flag": null,
      "name": "Global equities (DM)",
      "realReturnPct": 3.8741354425413945,
      "sentiment": 45.39861670806623,
    },
    {
      "beta": 1,
      "category": "Domestic",
      "driver": "Nominal earnings, foreign flow",
      "flag": null,
      "name": "Indonesian equities (IHSG)",
      "realReturnPct": 3.7931873447516455,
      "sentiment": 44.069099751602636,
    },
    {
      "beta": 0.4,
      "category": "Domestic",
      "driver": "Rent, mortgage rates",
      "flag": null,
      "name": "Property",
      "realReturnPct": 2.5581938296433684,
      "sentiment": 49.29311012742939,
    },
    {
      "beta": -0.5,
      "category": "Global",
      "driver": "Fed funds rate, safe haven",
      "flag": null,
      "name": "US Treasuries (UST)",
      "realReturnPct": 1.774135442541393,
      "sentiment": 58.838616708066226,
    },
    {
      "beta": -0.1,
      "category": "Domestic",
      "driver": "Domestic real rate",
      "flag": null,
      "name": "IDR deposits",
      "realReturnPct": -1.939810125121742,
      "sentiment": 48.09630379980521,
    },
    {
      "beta": 0.2,
      "category": "Domestic",
      "driver": "Yield curve, fiscal risk",
      "flag": null,
      "name": "Government bonds (SBN)",
      "realReturnPct": -2.6397063264703533,
      "sentiment": 43.37646987764744,
    },
    {
      "beta": 1.6,
      "category": "Global",
      "driver": "Global liquidity, risk appetite",
      "flag": null,
      "name": "Crypto (BTC)",
      "realReturnPct": -8.025864557458611,
      "sentiment": 17.958616708066216,
    },
  ],
  "portfolio": {
    "investorScore": 20.677043320064136,
    "realReturnPct": 2.297449257784904,
  },
  "regime": {
    "regime": "Overheating",
    "regimeNote": "Demand is outrunning capacity; the output gap is positive.",
  },
  "stakeholders": [
    {
      "key": "cb",
      "mechanism": "Demand-driven inflation is comparatively easy to handle. Raise rates above the Taylor rule, cool the output gap, credibility stays intact.",
      "name": "Central bank",
      "score": 52.43735103396461,
      "stats": [
        {
          "label": "Deviation from target",
          "tone": "negative",
          "value": "+3.9 pp",
        },
        {
          "label": "Credibility",
          "sub": "from expectation anchoring",
          "value": "81/100",
        },
        {
          "label": "Taylor rule",
          "sub": "actual 5.8%",
          "tone": "negative",
          "value": "11.5%",
        },
        {
          "label": "FX stress",
          "tone": "positive",
          "value": "0.0",
        },
      ],
      "subtitle": "Prices, output, and FX stability",
    },
    {
      "key": "bank",
      "mechanism": "Healthy intermediation: credit demand grows, NPLs are contained, margins are stable.",
      "name": "Commercial banks",
      "score": 23.84977735075153,
      "stats": [
        {
          "label": "Net interest margin",
          "value": "3.3%",
        },
        {
          "label": "Cost of funds",
          "value": "6.9%",
        },
        {
          "label": "Real credit growth",
          "value": "+12.5%",
        },
        {
          "label": "NPL ratio",
          "tone": "positive",
          "value": "3.4%",
        },
      ],
      "subtitle": "Margin, volume, asset quality",
    },
    {
      "key": "corp",
      "mechanism": "Nominal growth outruns cost growth. Cost of capital is reasonable, the investment window is open.",
      "name": "Corporates",
      "score": 20.636606255181846,
      "stats": [
        {
          "label": "Nominal revenue growth",
          "value": "+12.8%",
        },
        {
          "label": "Labor cost",
          "sub": "ULC +3.9%",
          "value": "+2.1 pp",
        },
        {
          "label": "Import + energy cost",
          "tone": "negative",
          "value": "+5.4 pp",
        },
        {
          "label": "Rent & land cost",
          "value": "+0.7 pp",
        },
        {
          "label": "FX debt hit",
          "tone": "negative",
          "value": "+2.2 pp",
        },
        {
          "label": "Margin change",
          "tone": "positive",
          "value": "+1.9 pp",
        },
      ],
      "subtitle": "Margin, input costs, FX debt burden",
    },
    {
      "key": "gov",
      "mechanism": "A sustainable fiscal position. Nominal growth outruns the interest bill, and the debt ratio falls on its own.",
      "name": "Government",
      "score": 22.430463331278546,
      "stats": [
        {
          "label": "Actual deficit",
          "tone": "negative",
          "value": "3.1%",
        },
        {
          "label": "Energy subsidy cost",
          "tone": "positive",
          "value": "1.8% GDP",
        },
        {
          "label": "Interest burden",
          "tone": "negative",
          "value": "3.6% GDP",
        },
        {
          "label": "Next year's debt ratio",
          "sub": "now 40.0%",
          "tone": "positive",
          "value": "38.0%",
        },
      ],
      "subtitle": "Budget, debt, subsidies",
    },
    {
      "key": "inv",
      "mechanism": "Risk premia are being paid fairly. Equities lead, bonds provide a positive real cushion.",
      "name": "Investors",
      "score": 20.677043320064136,
      "stats": [
        {
          "label": "Best instrument",
          "tone": "positive",
          "value": "Commodities & energy",
        },
        {
          "label": "Worst instrument",
          "tone": "negative",
          "value": "Crypto",
        },
        {
          "label": "Blended portfolio",
          "tone": "positive",
          "value": "+2.3%",
        },
        {
          "label": "Global real rate",
          "value": "-3.0%",
        },
      ],
      "subtitle": "Real IDR return and sentiment",
    },
    {
      "key": "people",
      "mechanism": "Rent is rising faster than wages. Pay raises are absorbed before they reach any other spending — real purchasing power falls even as nominal wages rise.",
      "name": "Households",
      "score": -3.170255336657364,
      "stats": [
        {
          "label": "Felt inflation",
          "sub": "official 6.9%",
          "tone": "negative",
          "value": "7.8%",
        },
        {
          "label": "Effective real wage",
          "tone": "negative",
          "value": "-2.3%",
        },
        {
          "label": "Rent vs wages",
          "tone": "negative",
          "value": "+1.3 pp",
        },
        {
          "label": "Unemployment",
          "sub": "underemployment 20.8%",
          "value": "4.8%",
        },
        {
          "label": "Consumer loan rate",
          "value": "9.3%",
        },
        {
          "label": "Real savings return",
          "tone": "negative",
          "value": "-1.9%",
        },
      ],
      "subtitle": "Purchasing power, jobs, cost of living",
    },
  ],
  "state": {
    "costCapital": 0.18101898748782583,
    "costGrowth": 10.866475505448411,
    "costImport": 5.432789113532627,
    "costLabor": 2.145,
    "costOfFunds": 6.936010126275566,
    "costRent": 0.6787338606353481,
    "cpiBottom": 7.844142071187857,
    "credibility": 80.85163265940211,
    "debtNext": 37.98127697016924,
    "deficitActual": 3.0832010202179365,
    "feltGap": 0.9043319460661152,
    "flow": -19.5336708758522,
    "flowParts": [
      {
        "contribution": 7.240759499513032,
        "label": "Real carry (domestic vs global real rate)",
        "raw": "+1.8 pp",
      },
      {
        "contribution": 11.444999999999999,
        "label": "Growth differential",
        "raw": "+3.8 pp",
      },
      {
        "contribution": -20,
        "label": "Global risk appetite",
        "raw": "25/100",
      },
      {
        "contribution": -30.800000000000004,
        "label": "Dollar strength (DXY)",
        "raw": "+14.0%",
      },
      {
        "contribution": 17.4,
        "label": "Net terms of trade",
        "raw": "+21.8 idx",
      },
      {
        "contribution": 1,
        "label": "FX reserve adequacy",
        "raw": "6.5 mo",
      },
      {
        "contribution": -0,
        "label": "Corporate FX debt",
        "raw": "12.0% GDP",
      },
      {
        "contribution": -5.819430375365226,
        "label": "Domestic nominal stability",
        "raw": "gap +3.9 pp",
      },
    ],
    "foodInfl": 10.075260948682097,
    "fuelPrice": 3.1496734681195764,
    "fxDebtHit": 2.2159047589456775,
    "fxStress": 0,
    "g": 5.8149999999999995,
    "gPot": 5,
    "gap": 0.815,
    "idr": -7.913945567663135,
    "interestBurden": 3.607181265524835,
    "jobGrowth": 2.9982499999999996,
    "kpr": 9.25,
    "marginDelta": 1.88833461967333,
    "nim": 3.2649999999999997,
    "nomRev": 12.754810125121741,
    "npl": 3.3673186068150103,
    "pi": 6.939810125121742,
    "piGap": 3.939810125121742,
    "r": 1.5499999999999998,
    "rEx": -1.189810125121742,
    "rG": -3,
    "realCredit": 12.46535443118304,
    "realWage": -1.439810125121742,
    "realWageFelt": -2.344142071187857,
    "rentBurden": 1.2873386063534804,
    "rentGrowth": 6.78733860635348,
    "savingsReal": -1.939810125121742,
    "sbnYield": 9.017953163812088,
    "spendingWeightSource": "default",
    "subsidyCost": 1.7684510202179364,
    "taylor": 11.517215187682615,
    "u": 4.760879,
    "ulc": 3.9,
    "underemp": 20.759999999999998,
  },
}
`;

exports[`solveMacro — golden snapshots > matches the "Global Goldilocks" preset snapshot 1`] = `
{
  "drivers": {
    "commod": 18,
    "debtRatio": 40,
    "deficit": 2.5,
    "dxy": -5,
    "fxDebt": 12,
    "gG": 3.8,
    "i": 4.5,
    "iFed": 2.5,
    "informal": 58,
    "oil": 5,
    "piG": 2,
    "pie": 2.6,
    "prod": 2.4,
    "reserves": 6.5,
    "riskOn": 80,
    "shock": 0,
    "subsidy": 60,
    "target": 3,
    "w": 6.5,
  },
  "flowNarrative": "Classic EM risk-on: thick real carry, a weak dollar, strong terms of trade. Global capital chases yield into SBN and Indonesian equities, the rupiah strengthens, and that strength itself dampens imported inflation.",
  "instruments": [
    {
      "beta": 1.6,
      "category": "Global",
      "driver": "Global liquidity, risk appetite",
      "flag": null,
      "name": "Crypto (BTC)",
      "realReturnPct": 26.158596000000003,
      "sentiment": 100,
    },
    {
      "beta": 1,
      "category": "Domestic",
      "driver": "Nominal earnings, foreign flow",
      "flag": null,
      "name": "Indonesian equities (IHSG)",
      "realReturnPct": 14.798063999999995,
      "sentiment": 88.0769024,
    },
    {
      "beta": 0.4,
      "category": "Domestic",
      "driver": "Rent, mortgage rates",
      "flag": null,
      "name": "Property",
      "realReturnPct": 4.648630000000001,
      "sentiment": 63.197808,
    },
    {
      "beta": 0.7,
      "category": "Global",
      "driver": "Terms of trade, global cycle",
      "flag": null,
      "name": "Commodities & energy",
      "realReturnPct": 2.828596,
      "sentiment": 64.6057536,
    },
    {
      "beta": 0.9,
      "category": "Global",
      "driver": "Global growth, FX",
      "flag": null,
      "name": "Global equities (DM)",
      "realReturnPct": 1.5585960000000005,
      "sentiment": 65.4537536,
    },
    {
      "beta": -0.1,
      "category": "Domestic",
      "driver": "Domestic real rate",
      "flag": null,
      "name": "IDR deposits",
      "realReturnPct": -0.5402000000000005,
      "sentiment": 47.69568,
    },
    {
      "beta": 0.2,
      "category": "Domestic",
      "driver": "Yield curve, fiscal risk",
      "flag": null,
      "name": "Government bonds (SBN)",
      "realReturnPct": -0.6008960000000014,
      "sentiment": 51.9185664,
    },
    {
      "beta": -0.5,
      "category": "Global",
      "driver": "Fed funds rate, safe haven",
      "flag": null,
      "name": "US Treasuries (UST)",
      "realReturnPct": -6.141404,
      "sentiment": 32.973753599999995,
    },
    {
      "beta": -0.7,
      "category": "Global",
      "driver": "Fed funds rate, FX",
      "flag": null,
      "name": "USD cash",
      "realReturnPct": -7.591404,
      "sentiment": 27.7737536,
    },
    {
      "beta": -0.4,
      "category": "Global",
      "driver": "Global real rate (inverse)",
      "flag": null,
      "name": "Gold",
      "realReturnPct": -9.941404,
      "sentiment": 28.333753599999998,
    },
  ],
  "portfolio": {
    "investorScore": 40.56942419999999,
    "realReturnPct": 4.507713799999999,
  },
  "regime": {
    "regime": "Goldilocks",
    "regimeNote": "Inflation is near target and output is near potential.",
  },
  "stakeholders": [
    {
      "key": "cb",
      "mechanism": "Both sides of the mandate are satisfied. Focus shifts to financial-system stability and rebuilding policy space.",
      "name": "Central bank",
      "score": 90.67115188,
      "stats": [
        {
          "label": "Deviation from target",
          "tone": "positive",
          "value": "+1.3 pp",
        },
        {
          "label": "Credibility",
          "sub": "from expectation anchoring",
          "value": "95/100",
        },
        {
          "label": "Taylor rule",
          "sub": "actual 4.5%",
          "tone": "negative",
          "value": "8.0%",
        },
        {
          "label": "FX stress",
          "tone": "positive",
          "value": "0.0",
        },
      ],
      "subtitle": "Prices, output, and FX stability",
    },
    {
      "key": "bank",
      "mechanism": "Healthy intermediation: credit demand grows, NPLs are contained, margins are stable.",
      "name": "Commercial banks",
      "score": 49.522552000000005,
      "stats": [
        {
          "label": "Net interest margin",
          "value": "3.0%",
        },
        {
          "label": "Cost of funds",
          "value": "5.1%",
        },
        {
          "label": "Real credit growth",
          "value": "+19.4%",
        },
        {
          "label": "NPL ratio",
          "tone": "positive",
          "value": "2.0%",
        },
      ],
      "subtitle": "Margin, volume, asset quality",
    },
    {
      "key": "corp",
      "mechanism": "Nominal growth outruns cost growth. Cost of capital is reasonable, the investment window is open.",
      "name": "Corporates",
      "score": 45.102115999999995,
      "stats": [
        {
          "label": "Nominal revenue growth",
          "value": "+11.8%",
        },
        {
          "label": "Labor cost",
          "sub": "ULC +4.1%",
          "value": "+2.3 pp",
        },
        {
          "label": "Import + energy cost",
          "tone": "positive",
          "value": "+0.4 pp",
        },
        {
          "label": "Rent & land cost",
          "value": "+0.5 pp",
        },
        {
          "label": "FX debt hit",
          "tone": "positive",
          "value": "+0.0 pp",
        },
        {
          "label": "Margin change",
          "tone": "positive",
          "value": "+6.8 pp",
        },
      ],
      "subtitle": "Margin, input costs, FX debt burden",
    },
    {
      "key": "gov",
      "mechanism": "A sustainable fiscal position. Nominal growth outruns the interest bill, and the debt ratio falls on its own.",
      "name": "Government",
      "score": 43.82412,
      "stats": [
        {
          "label": "Actual deficit",
          "tone": "positive",
          "value": "2.0%",
        },
        {
          "label": "Energy subsidy cost",
          "tone": "positive",
          "value": "1.0% GDP",
        },
        {
          "label": "Interest burden",
          "tone": "positive",
          "value": "1.9% GDP",
        },
        {
          "label": "Next year's debt ratio",
          "sub": "now 40.0%",
          "tone": "positive",
          "value": "37.3%",
        },
      ],
      "subtitle": "Budget, debt, subsidies",
    },
    {
      "key": "inv",
      "mechanism": "Risk premia are being paid fairly. Equities lead, bonds provide a positive real cushion.",
      "name": "Investors",
      "score": 40.56942419999999,
      "stats": [
        {
          "label": "Best instrument",
          "tone": "positive",
          "value": "Crypto",
        },
        {
          "label": "Worst instrument",
          "tone": "negative",
          "value": "Gold",
        },
        {
          "label": "Blended portfolio",
          "tone": "positive",
          "value": "+4.5%",
        },
        {
          "label": "Global real rate",
          "value": "+0.5%",
        },
      ],
      "subtitle": "Real IDR return and sentiment",
    },
    {
      "key": "people",
      "mechanism": "Purchasing power is rising and the labor market is tight. Worker bargaining power is at its peak.",
      "name": "Households",
      "score": 30.9312216,
      "stats": [
        {
          "label": "Felt inflation",
          "sub": "official 4.3%",
          "tone": "positive",
          "value": "4.2%",
        },
        {
          "label": "Effective real wage",
          "tone": "positive",
          "value": "+2.3%",
        },
        {
          "label": "Rent vs wages",
          "tone": "positive",
          "value": "-1.2 pp",
        },
        {
          "label": "Unemployment",
          "sub": "underemployment 20.8%",
          "value": "4.5%",
        },
        {
          "label": "Consumer loan rate",
          "value": "8.0%",
        },
        {
          "label": "Real savings return",
          "tone": "negative",
          "value": "-0.5%",
        },
      ],
      "subtitle": "Purchasing power, jobs, cost of living",
    },
  ],
  "state": {
    "costCapital": 0.32098,
    "costGrowth": 4.952962,
    "costImport": 0.35000000000000003,
    "costLabor": 2.255,
    "costOfFunds": 5.1,
    "costRent": 0.5254120000000001,
    "cpiBottom": 4.2184864,
    "credibility": 95.2,
    "debtNext": 37.25492,
    "deficitActual": 1.9709999999999999,
    "feltGap": -0.07171360000000071,
    "flow": 51.2192,
    "flowParts": [
      {
        "contribution": -1.1608000000000018,
        "label": "Real carry (domestic vs global real rate)",
        "raw": "-0.3 pp",
      },
      {
        "contribution": 11.100000000000001,
        "label": "Growth differential",
        "raw": "+3.7 pp",
      },
      {
        "contribution": 24,
        "label": "Global risk appetite",
        "raw": "80/100",
      },
      {
        "contribution": 11,
        "label": "Dollar strength (DXY)",
        "raw": "-5.0%",
      },
      {
        "contribution": 5.279999999999999,
        "label": "Net terms of trade",
        "raw": "+6.6 idx",
      },
      {
        "contribution": 1,
        "label": "FX reserve adequacy",
        "raw": "6.5 mo",
      },
      {
        "contribution": -0,
        "label": "Corporate FX debt",
        "raw": "12.0% GDP",
      },
      {
        "contribution": -0,
        "label": "Domestic nominal stability",
        "raw": "gap +1.3 pp",
      },
    ],
    "foodInfl": 4.5884,
    "fuelPrice": 0.2,
    "fxDebtHit": 0,
    "fxStress": 0,
    "g": 7.5,
    "gPot": 5.8,
    "gap": 1.7000000000000002,
    "idr": 5.551203999999999,
    "interestBurden": 1.9401936,
    "jobGrowth": 3.925,
    "kpr": 8,
    "marginDelta": 6.837238,
    "nim": 2.99,
    "nomRev": 11.7902,
    "npl": 2,
    "pi": 4.2902000000000005,
    "piGap": 1.2902000000000005,
    "r": 1.9,
    "rEx": 0.20979999999999954,
    "rG": 0.5,
    "realCredit": 19.35116,
    "realWage": 2.2097999999999995,
    "realWageFelt": 2.2815136000000003,
    "rentBurden": -1.2458799999999997,
    "rentGrowth": 5.25412,
    "savingsReal": -0.5402000000000005,
    "sbnYield": 4.850484,
    "spendingWeightSource": "default",
    "subsidyCost": 0.966,
    "taylor": 7.9853000000000005,
    "u": 4.50122,
    "ulc": 4.1,
    "underemp": 20.759999999999998,
  },
}
`;

exports[`solveMacro — golden snapshots > matches the "Indonesia, normal" preset snapshot 1`] = `
{
  "drivers": {
    "commod": 5,
    "debtRatio": 40,
    "deficit": 2.5,
    "dxy": 0,
    "fxDebt": 12,
    "gG": 3,
    "i": 4.75,
    "iFed": 4,
    "informal": 58,
    "oil": 0,
    "piG": 2.6,
    "pie": 2.4,
    "prod": 1.6,
    "reserves": 6.5,
    "riskOn": 55,
    "shock": 0,
    "subsidy": 60,
    "target": 3,
    "w": 5.5,
  },
  "flowNarrative": "Moderate inflows. Foreign investors add SBN first — liquid and easy to size — before rotating into equities.",
  "instruments": [
    {
      "beta": 1,
      "category": "Domestic",
      "driver": "Nominal earnings, foreign flow",
      "flag": null,
      "name": "Indonesian equities (IHSG)",
      "realReturnPct": 8.80147856,
      "sentiment": 66.482365696,
    },
    {
      "beta": 0.9,
      "category": "Global",
      "driver": "Global growth, FX",
      "flag": null,
      "name": "Global equities (DM)",
      "realReturnPct": 4.6321128400000005,
      "sentiment": 59.57138054400001,
    },
    {
      "beta": 0.2,
      "category": "Domestic",
      "driver": "Yield curve, fiscal risk",
      "flag": null,
      "name": "Government bonds (SBN)",
      "realReturnPct": 2.62960016,
      "sentiment": 54.687360256,
    },
    {
      "beta": 0.4,
      "category": "Domestic",
      "driver": "Rent, mortgage rates",
      "flag": null,
      "name": "Property",
      "realReturnPct": 1.9228326999999998,
      "sentiment": 54.03653232,
    },
    {
      "beta": 1.6,
      "category": "Global",
      "driver": "Global liquidity, risk appetite",
      "flag": null,
      "name": "Crypto (BTC)",
      "realReturnPct": 1.5521128400000004,
      "sentiment": 56.323380544,
    },
    {
      "beta": -0.5,
      "category": "Global",
      "driver": "Fed funds rate, safe haven",
      "flag": null,
      "name": "US Treasuries (UST)",
      "realReturnPct": 1.3121128400000002,
      "sentiment": 50.899380543999996,
    },
    {
      "beta": -0.1,
      "category": "Domestic",
      "driver": "Domestic real rate",
      "flag": null,
      "name": "IDR deposits",
      "realReturnPct": 0.875642,
      "sentiment": 51.1610272,
    },
    {
      "beta": 0.7,
      "category": "Global",
      "driver": "Terms of trade, global cycle",
      "flag": null,
      "name": "Commodities & energy",
      "realReturnPct": 0.6021128400000002,
      "sentiment": 52.643380544,
    },
    {
      "beta": -0.7,
      "category": "Global",
      "driver": "Fed funds rate, FX",
      "flag": null,
      "name": "USD cash",
      "realReturnPct": 0.40211284,
      "sentiment": 48.963380544,
    },
    {
      "beta": -0.4,
      "category": "Global",
      "driver": "Global real rate (inverse)",
      "flag": null,
      "name": "Gold",
      "realReturnPct": -2.56788716,
      "sentiment": 44.931380544,
    },
  ],
  "portfolio": {
    "investorScore": 32.879259018,
    "realReturnPct": 3.6532510019999997,
  },
  "regime": {
    "regime": "Goldilocks",
    "regimeNote": "Inflation is near target and output is near potential.",
  },
  "stakeholders": [
    {
      "key": "cb",
      "mechanism": "Both sides of the mandate are satisfied. Focus shifts to financial-system stability and rebuilding policy space.",
      "name": "Central bank",
      "score": 99.933767763508,
      "stats": [
        {
          "label": "Deviation from target",
          "tone": "positive",
          "value": "+0.1 pp",
        },
        {
          "label": "Credibility",
          "sub": "from expectation anchoring",
          "value": "93/100",
        },
        {
          "label": "Taylor rule",
          "sub": "actual 4.8%",
          "tone": "positive",
          "value": "5.4%",
        },
        {
          "label": "FX stress",
          "tone": "positive",
          "value": "0.0",
        },
      ],
      "subtitle": "Prices, output, and FX stability",
    },
    {
      "key": "bank",
      "mechanism": "Healthy intermediation: credit demand grows, NPLs are contained, margins are stable.",
      "name": "Commercial banks",
      "score": 32.09982008000001,
      "stats": [
        {
          "label": "Net interest margin",
          "value": "3.0%",
        },
        {
          "label": "Cost of funds",
          "value": "5.3%",
        },
        {
          "label": "Real credit growth",
          "value": "+11.3%",
        },
        {
          "label": "NPL ratio",
          "tone": "positive",
          "value": "2.0%",
        },
      ],
      "subtitle": "Margin, volume, asset quality",
    },
    {
      "key": "corp",
      "mechanism": "Nominal growth outruns cost growth. Cost of capital is reasonable, the investment window is open.",
      "name": "Corporates",
      "score": 29.834785640000003,
      "stats": [
        {
          "label": "Nominal revenue growth",
          "value": "+8.2%",
        },
        {
          "label": "Labor cost",
          "sub": "ULC +3.9%",
          "value": "+2.1 pp",
        },
        {
          "label": "Import + energy cost",
          "tone": "positive",
          "value": "+0.0 pp",
        },
        {
          "label": "Rent & land cost",
          "value": "+0.4 pp",
        },
        {
          "label": "FX debt hit",
          "tone": "positive",
          "value": "+0.0 pp",
        },
        {
          "label": "Margin change",
          "tone": "positive",
          "value": "+4.1 pp",
        },
      ],
      "subtitle": "Margin, input costs, FX debt burden",
    },
    {
      "key": "gov",
      "mechanism": "A sustainable fiscal position. Nominal growth outruns the interest bill, and the debt ratio falls on its own.",
      "name": "Government",
      "score": 39.5471148,
      "stats": [
        {
          "label": "Actual deficit",
          "tone": "positive",
          "value": "2.5%",
        },
        {
          "label": "Energy subsidy cost",
          "tone": "positive",
          "value": "0.9% GDP",
        },
        {
          "label": "Interest burden",
          "tone": "positive",
          "value": "2.3% GDP",
        },
        {
          "label": "Next year's debt ratio",
          "sub": "now 40.0%",
          "tone": "positive",
          "value": "39.2%",
        },
      ],
      "subtitle": "Budget, debt, subsidies",
    },
    {
      "key": "inv",
      "mechanism": "Risk premia are being paid fairly. Equities lead, bonds provide a positive real cushion.",
      "name": "Investors",
      "score": 32.879259018,
      "stats": [
        {
          "label": "Best instrument",
          "tone": "positive",
          "value": "Indonesian equities",
        },
        {
          "label": "Worst instrument",
          "tone": "negative",
          "value": "Gold",
        },
        {
          "label": "Blended portfolio",
          "tone": "positive",
          "value": "+3.7%",
        },
        {
          "label": "Global real rate",
          "value": "+1.4%",
        },
      ],
      "subtitle": "Real IDR return and sentiment",
    },
    {
      "key": "people",
      "mechanism": "Purchasing power is rising and the labor market is tight. Worker bargaining power is at its peak.",
      "name": "Households",
      "score": 22.001694984,
      "stats": [
        {
          "label": "Felt inflation",
          "sub": "official 3.1%",
          "tone": "positive",
          "value": "3.2%",
        },
        {
          "label": "Effective real wage",
          "tone": "positive",
          "value": "+2.3%",
        },
        {
          "label": "Rent vs wages",
          "tone": "positive",
          "value": "-1.6 pp",
        },
        {
          "label": "Unemployment",
          "sub": "underemployment 20.8%",
          "value": "5.0%",
        },
        {
          "label": "Consumer loan rate",
          "value": "8.3%",
        },
        {
          "label": "Real savings return",
          "tone": "positive",
          "value": "+0.9%",
        },
      ],
      "subtitle": "Purchasing power, jobs, cost of living",
    },
  ],
  "state": {
    "costCapital": 0.46256420000000004,
    "costGrowth": 4.09315098,
    "costImport": 0,
    "costLabor": 2.145,
    "costOfFunds": 5.35,
    "costRent": 0.39206147999999996,
    "cpiBottom": 3.241039936,
    "credibility": 92.8,
    "debtNext": 39.1640068,
    "deficitActual": 2.45975,
    "feltGap": 0.11668193599999999,
    "flow": 14.047568000000002,
    "flowParts": [
      {
        "contribution": 0.9025680000000005,
        "label": "Real carry (domestic vs global real rate)",
        "raw": "+0.2 pp",
      },
      {
        "contribution": 6.345000000000001,
        "label": "Growth differential",
        "raw": "+2.1 pp",
      },
      {
        "contribution": 4,
        "label": "Global risk appetite",
        "raw": "55/100",
      },
      {
        "contribution": -0,
        "label": "Dollar strength (DXY)",
        "raw": "+0.0%",
      },
      {
        "contribution": 1.7999999999999998,
        "label": "Net terms of trade",
        "raw": "+2.3 idx",
      },
      {
        "contribution": 1,
        "label": "FX reserve adequacy",
        "raw": "6.5 mo",
      },
      {
        "contribution": -0,
        "label": "Corporate FX debt",
        "raw": "12.0% GDP",
      },
      {
        "contribution": -0,
        "label": "Domestic nominal stability",
        "raw": "gap +0.1 pp",
      },
    ],
    "foodInfl": 3.72898,
    "fuelPrice": 0,
    "fxDebtHit": 0,
    "fxStress": 0,
    "g": 5.115,
    "gPot": 5,
    "gap": 0.11500000000000007,
    "idr": 0.22352916000000017,
    "interestBurden": 2.3463521439999995,
    "jobGrowth": 2.6132500000000003,
    "kpr": 8.25,
    "marginDelta": 4.146207019999999,
    "nim": 3.045,
    "nomRev": 8.239358,
    "npl": 2,
    "pi": 3.124358,
    "piGap": 0.12435799999999997,
    "r": 2.35,
    "rEx": 1.625642,
    "rG": 1.4,
    "realCredit": 11.306736400000002,
    "realWage": 2.375642,
    "realWageFelt": 2.258960064,
    "rentBurden": -1.5793852000000004,
    "rentGrowth": 3.9206147999999996,
    "savingsReal": 0.875642,
    "sbnYield": 5.865880359999999,
    "spendingWeightSource": "default",
    "subsidyCost": 0.9,
    "taylor": 5.444037000000001,
    "u": 4.966259,
    "ulc": 3.9,
    "underemp": 20.759999999999998,
  },
}
`;

exports[`solveMacro — golden snapshots > matches the "Liquidity flood 2021" preset snapshot 1`] = `
{
  "drivers": {
    "commod": 60,
    "debtRatio": 40,
    "deficit": 5.5,
    "dxy": -5,
    "fxDebt": 12,
    "gG": 5.5,
    "i": 3.5,
    "iFed": 0.1,
    "informal": 58,
    "oil": 45,
    "piG": 3.5,
    "pie": 2,
    "prod": 1.6,
    "reserves": 6.5,
    "riskOn": 92,
    "shock": 0,
    "subsidy": 60,
    "target": 3,
    "w": 5.5,
  },
  "flowNarrative": "Classic EM risk-on: thick real carry, a weak dollar, strong terms of trade. Global capital chases yield into SBN and Indonesian equities, the rupiah strengthens, and that strength itself dampens imported inflation.",
  "instruments": [
    {
      "beta": 1.6,
      "category": "Global",
      "driver": "Global liquidity, risk appetite",
      "flag": null,
      "name": "Crypto (BTC)",
      "realReturnPct": 51.72469008,
      "sentiment": 100,
    },
    {
      "beta": 0.7,
      "category": "Global",
      "driver": "Terms of trade, global cycle",
      "flag": null,
      "name": "Commodities & energy",
      "realReturnPct": 33.22469008,
      "sentiment": 100,
    },
    {
      "beta": 1,
      "category": "Domestic",
      "driver": "Nominal earnings, foreign flow",
      "flag": null,
      "name": "Indonesian equities (IHSG)",
      "realReturnPct": 15.715859520000002,
      "sentiment": 95.305375232,
    },
    {
      "beta": 0.4,
      "category": "Domestic",
      "driver": "Rent, mortgage rates",
      "flag": null,
      "name": "Property",
      "realReturnPct": 6.065381900000001,
      "sentiment": 67.76861104,
    },
    {
      "beta": 0.9,
      "category": "Global",
      "driver": "Global growth, FX",
      "flag": "crowded",
      "name": "Global equities (DM)",
      "realReturnPct": 0.7746900800000001,
      "sentiment": 69.383504128,
    },
    {
      "beta": -0.1,
      "category": "Domestic",
      "driver": "Domestic real rate",
      "flag": null,
      "name": "IDR deposits",
      "realReturnPct": -4.737912000000001,
      "sentiment": 40.4033408,
    },
    {
      "beta": -0.4,
      "category": "Global",
      "driver": "Global real rate (inverse)",
      "flag": null,
      "name": "Gold",
      "realReturnPct": -5.045309919999999,
      "sentiment": 33.863504128,
    },
    {
      "beta": 0.2,
      "category": "Domestic",
      "driver": "Yield curve, fiscal risk",
      "flag": null,
      "name": "Government bonds (SBN)",
      "realReturnPct": -6.975997680000002,
      "sentiment": 42.870403712,
    },
    {
      "beta": -0.5,
      "category": "Global",
      "driver": "Fed funds rate, safe haven",
      "flag": null,
      "name": "US Treasuries (UST)",
      "realReturnPct": -13.275309919999998,
      "sentiment": 18.679504128000005,
    },
    {
      "beta": -0.7,
      "category": "Global",
      "driver": "Fed funds rate, FX",
      "flag": null,
      "name": "USD cash",
      "realReturnPct": -13.37530992,
      "sentiment": 14.487504128000003,
    },
  ],
  "portfolio": {
    "investorScore": 40.64057526600001,
    "realReturnPct": 4.515619474000001,
  },
  "regime": {
    "regime": "Overheating",
    "regimeNote": "Demand is outrunning capacity; the output gap is positive.",
  },
  "stakeholders": [
    {
      "key": "cb",
      "mechanism": "Demand-driven inflation is comparatively easy to handle. Raise rates above the Taylor rule, cool the output gap, credibility stays intact.",
      "name": "Central bank",
      "score": 3.266337640767972,
      "stats": [
        {
          "label": "Deviation from target",
          "tone": "negative",
          "value": "+4.5 pp",
        },
        {
          "label": "Credibility",
          "sub": "from expectation anchoring",
          "value": "88/100",
        },
        {
          "label": "Taylor rule",
          "sub": "actual 3.5%",
          "tone": "negative",
          "value": "14.4%",
        },
        {
          "label": "FX stress",
          "tone": "positive",
          "value": "0.0",
        },
      ],
      "subtitle": "Prices, output, and FX stability",
    },
    {
      "key": "bank",
      "mechanism": "Healthy intermediation: credit demand grows, NPLs are contained, margins are stable.",
      "name": "Commercial banks",
      "score": 51.27457848000001,
      "stats": [
        {
          "label": "Net interest margin",
          "value": "2.8%",
        },
        {
          "label": "Cost of funds",
          "value": "4.1%",
        },
        {
          "label": "Real credit growth",
          "value": "+24.5%",
        },
        {
          "label": "NPL ratio",
          "tone": "positive",
          "value": "2.8%",
        },
      ],
      "subtitle": "Margin, volume, asset quality",
    },
    {
      "key": "corp",
      "mechanism": "Nominal growth outruns cost growth. Cost of capital is reasonable, the investment window is open.",
      "name": "Corporates",
      "score": 53.852081360000014,
      "stats": [
        {
          "label": "Nominal revenue growth",
          "value": "+17.4%",
        },
        {
          "label": "Labor cost",
          "sub": "ULC +3.9%",
          "value": "+2.1 pp",
        },
        {
          "label": "Import + energy cost",
          "tone": "negative",
          "value": "+3.1 pp",
        },
        {
          "label": "Rent & land cost",
          "value": "+0.9 pp",
        },
        {
          "label": "FX debt hit",
          "tone": "positive",
          "value": "+0.0 pp",
        },
        {
          "label": "Margin change",
          "tone": "positive",
          "value": "+8.6 pp",
        },
      ],
      "subtitle": "Margin, input costs, FX debt burden",
    },
    {
      "key": "gov",
      "mechanism": "A sustainable fiscal position. Nominal growth outruns the interest bill, and the debt ratio falls on its own.",
      "name": "Government",
      "score": 32.90874720000001,
      "stats": [
        {
          "label": "Actual deficit",
          "tone": "negative",
          "value": "4.4%",
        },
        {
          "label": "Energy subsidy cost",
          "tone": "positive",
          "value": "1.5% GDP",
        },
        {
          "label": "Interest burden",
          "tone": "positive",
          "value": "1.8% GDP",
        },
        {
          "label": "Next year's debt ratio",
          "sub": "now 40.0%",
          "tone": "positive",
          "value": "37.4%",
        },
      ],
      "subtitle": "Budget, debt, subsidies",
    },
    {
      "key": "inv",
      "mechanism": "Risk premia are being paid fairly. Equities lead, bonds provide a positive real cushion.",
      "name": "Investors",
      "score": 40.64057526600001,
      "stats": [
        {
          "label": "Best instrument",
          "tone": "positive",
          "value": "Crypto",
        },
        {
          "label": "Worst instrument",
          "tone": "negative",
          "value": "USD cash",
        },
        {
          "label": "Blended portfolio",
          "tone": "positive",
          "value": "+4.5%",
        },
        {
          "label": "Global real rate",
          "value": "-3.4%",
        },
      ],
      "subtitle": "Real IDR return and sentiment",
    },
    {
      "key": "people",
      "mechanism": "Rent is rising faster than wages. Pay raises are absorbed before they reach any other spending — real purchasing power falls even as nominal wages rise.",
      "name": "Households",
      "score": 14.663315416000003,
      "stats": [
        {
          "label": "Felt inflation",
          "sub": "official 7.5%",
          "tone": "positive",
          "value": "6.6%",
        },
        {
          "label": "Effective real wage",
          "tone": "negative",
          "value": "-1.1%",
        },
        {
          "label": "Rent vs wages",
          "tone": "negative",
          "value": "+4.0 pp",
        },
        {
          "label": "Unemployment",
          "sub": "underemployment 20.8%",
          "value": "3.6%",
        },
        {
          "label": "Consumer loan rate",
          "value": "7.0%",
        },
        {
          "label": "Real savings return",
          "tone": "negative",
          "value": "-4.7%",
        },
      ],
      "subtitle": "Purchasing power, jobs, cost of living",
    },
  ],
  "state": {
    "costCapital": -0.09879120000000007,
    "costGrowth": 8.76275052,
    "costImport": 3.15,
    "costLabor": 2.145,
    "costOfFunds": 4.1,
    "costRent": 0.9457725200000001,
    "cpiBottom": 6.576289464,
    "credibility": 88,
    "debtNext": 37.4088352,
    "deficitActual": 4.372,
    "feltGap": -0.9116225360000003,
    "flow": 59.844615999999995,
    "flowParts": [
      {
        "contribution": -2.3516480000000026,
        "label": "Real carry (domestic vs global real rate)",
        "raw": "-0.6 pp",
      },
      {
        "contribution": 13.260000000000005,
        "label": "Growth differential",
        "raw": "+4.4 pp",
      },
      {
        "contribution": 33.6,
        "label": "Global risk appetite",
        "raw": "92/100",
      },
      {
        "contribution": 11,
        "label": "Dollar strength (DXY)",
        "raw": "-5.0%",
      },
      {
        "contribution": 10.799999999999999,
        "label": "Net terms of trade",
        "raw": "+13.5 idx",
      },
      {
        "contribution": 1,
        "label": "FX reserve adequacy",
        "raw": "6.5 mo",
      },
      {
        "contribution": -0,
        "label": "Corporate FX debt",
        "raw": "12.0% GDP",
      },
      {
        "contribution": -7.463736000000002,
        "label": "Domestic nominal stability",
        "raw": "gap +4.5 pp",
      },
    ],
    "foodInfl": 5.63984,
    "fuelPrice": 1.8,
    "fxDebtHit": 0,
    "fxStress": 0,
    "g": 9.920000000000002,
    "gPot": 5,
    "gap": 4.920000000000001,
    "idr": 5.7373979199999985,
    "interestBurden": 1.8204140480000002,
    "jobGrowth": 5.256000000000001,
    "kpr": 7,
    "marginDelta": 8.645161480000002,
    "nim": 2.77,
    "nomRev": 17.407912000000003,
    "npl": 2.7951648000000002,
    "pi": 7.487912000000001,
    "piGap": 4.487912000000001,
    "r": 1.5,
    "rEx": -3.9879120000000006,
    "rG": -3.4,
    "realCredit": 24.534648400000002,
    "realWage": -1.9879120000000006,
    "realWageFelt": -1.0762894640000003,
    "rentBurden": 3.9577252000000005,
    "rentGrowth": 9.4577252,
    "savingsReal": -4.737912000000001,
    "sbnYield": 4.55103512,
    "spendingWeightSource": "default",
    "subsidyCost": 1.494,
    "taylor": 14.391868000000002,
    "u": 3.5564719999999994,
    "ulc": 3.9,
    "underemp": 20.759999999999998,
  },
}
`;

exports[`solveMacro — golden snapshots > matches the "Oil shock" preset snapshot 1`] = `
{
  "drivers": {
    "commod": 40,
    "debtRatio": 40,
    "deficit": 4.2,
    "dxy": 7,
    "fxDebt": 12,
    "gG": 1.2,
    "i": 6,
    "iFed": 4,
    "informal": 58,
    "oil": 95,
    "piG": 2.6,
    "pie": 5.5,
    "prod": 1.6,
    "reserves": 6.5,
    "riskOn": 22,
    "shock": 3.5,
    "subsidy": 75,
    "target": 3,
    "w": 5.5,
  },
  "flowNarrative": "Sudden stop. Capital leaves regardless of valuation; only dollar liquidity matters. The central bank loses control of domestic rates and must defend the currency instead.",
  "instruments": [
    {
      "beta": 0.7,
      "category": "Global",
      "driver": "Terms of trade, global cycle",
      "flag": null,
      "name": "Commodities & energy",
      "realReturnPct": 54.82513252612821,
      "sentiment": 100,
    },
    {
      "beta": -0.5,
      "category": "Global",
      "driver": "Fed funds rate, safe haven",
      "flag": null,
      "name": "US Treasuries (UST)",
      "realReturnPct": 13.255132526128214,
      "sentiment": 77.92821204180514,
    },
    {
      "beta": -0.4,
      "category": "Global",
      "driver": "Global real rate (inverse)",
      "flag": null,
      "name": "Gold",
      "realReturnPct": 12.675132526128216,
      "sentiment": 75.65621204180515,
    },
    {
      "beta": -0.7,
      "category": "Global",
      "driver": "Fed funds rate, FX",
      "flag": null,
      "name": "USD cash",
      "realReturnPct": 12.345132526128214,
      "sentiment": 79.16021204180514,
    },
    {
      "beta": 0.9,
      "category": "Global",
      "driver": "Global growth, FX",
      "flag": null,
      "name": "Global equities (DM)",
      "realReturnPct": 11.475132526128213,
      "sentiment": 56.26421204180514,
    },
    {
      "beta": -0.1,
      "category": "Domestic",
      "driver": "Domestic real rate",
      "flag": null,
      "name": "IDR deposits",
      "realReturnPct": -4.574176351966976,
      "sentiment": 44.02531783685284,
    },
    {
      "beta": 0.4,
      "category": "Domestic",
      "driver": "Rent, mortgage rates",
      "flag": null,
      "name": "Property",
      "realReturnPct": -5.534958519720124,
      "sentiment": 35.768066368447805,
    },
    {
      "beta": 0.2,
      "category": "Domestic",
      "driver": "Yield curve, fiscal risk",
      "flag": null,
      "name": "Government bonds (SBN)",
      "realReturnPct": -9.207987338675089,
      "sentiment": 32.579220258119854,
    },
    {
      "beta": 1,
      "category": "Domestic",
      "driver": "Nominal earnings, foreign flow",
      "flag": null,
      "name": "Indonesian equities (IHSG)",
      "realReturnPct": -20.282100564637197,
      "sentiment": 4.108639096580479,
    },
    {
      "beta": 1.6,
      "category": "Global",
      "driver": "Global liquidity, risk appetite",
      "flag": null,
      "name": "Crypto (BTC)",
      "realReturnPct": -22.80486747387179,
      "sentiment": 0,
    },
  ],
  "portfolio": {
    "investorScore": -58.814061346424864,
    "realReturnPct": -6.534895705158318,
  },
  "regime": {
    "regime": "Stagflation",
    "regimeNote": "A supply shock: the central bank cannot fix both sides of its mandate at once.",
  },
  "stakeholders": [
    {
      "key": "cb",
      "mechanism": "Maximum trade-off. Inflation is coming from the supply side, while central bank tools only work on demand — raising rates does not add food supply or lower oil prices.",
      "name": "Central bank",
      "score": -100,
      "stats": [
        {
          "label": "Deviation from target",
          "tone": "negative",
          "value": "+6.8 pp",
        },
        {
          "label": "Credibility",
          "sub": "from expectation anchoring",
          "value": "59/100",
        },
        {
          "label": "Taylor rule",
          "sub": "actual 6.0%",
          "tone": "negative",
          "value": "11.5%",
        },
        {
          "label": "FX stress",
          "tone": "negative",
          "value": "12.5",
        },
      ],
      "subtitle": "Prices, output, and FX stability",
    },
    {
      "key": "bank",
      "mechanism": "Asset quality becomes the dominant problem. Loan-loss provisioning eats capital faster than net interest margin can rebuild it, and banks start rationing credit.",
      "name": "Commercial banks",
      "score": -71.51218391789959,
      "stats": [
        {
          "label": "Net interest margin",
          "value": "3.3%",
        },
        {
          "label": "Cost of funds",
          "value": "9.4%",
        },
        {
          "label": "Real credit growth",
          "value": "-9.3%",
        },
        {
          "label": "NPL ratio",
          "tone": "negative",
          "value": "9.7%",
        },
      ],
      "subtitle": "Margin, volume, asset quality",
    },
    {
      "key": "corp",
      "mechanism": "FX debt is the main problem here, not operating margin. Depreciation hits the balance sheet faster than export revenue can offset it.",
      "name": "Corporates",
      "score": -55.9247081557512,
      "stats": [
        {
          "label": "Nominal revenue growth",
          "value": "+6.9%",
        },
        {
          "label": "Labor cost",
          "sub": "ULC +3.9%",
          "value": "+2.1 pp",
        },
        {
          "label": "Import + energy cost",
          "tone": "negative",
          "value": "+10.3 pp",
        },
        {
          "label": "Rent & land cost",
          "value": "+0.6 pp",
        },
        {
          "label": "FX debt hit",
          "tone": "negative",
          "value": "+5.2 pp",
        },
        {
          "label": "Margin change",
          "tone": "negative",
          "value": "-9.5 pp",
        },
      ],
      "subtitle": "Margin, input costs, FX debt burden",
    },
    {
      "key": "gov",
      "mechanism": "The deficit has crossed the market’s comfort line. SBN issuance rises just as foreign demand falls, so yields rise and the interest bill grows with them.",
      "name": "Government",
      "score": -100,
      "stats": [
        {
          "label": "Actual deficit",
          "tone": "negative",
          "value": "9.0%",
        },
        {
          "label": "Energy subsidy cost",
          "tone": "negative",
          "value": "2.9% GDP",
        },
        {
          "label": "Interest burden",
          "tone": "negative",
          "value": "4.9% GDP",
        },
        {
          "label": "Next year's debt ratio",
          "sub": "now 40.0%",
          "tone": "negative",
          "value": "46.2%",
        },
      ],
      "subtitle": "Budget, debt, subsidies",
    },
    {
      "key": "inv",
      "mechanism": "Real assets lead. Bonds and equities fall together — diversification fails exactly when it is needed most.",
      "name": "Investors",
      "score": -58.814061346424864,
      "stats": [
        {
          "label": "Best instrument",
          "tone": "positive",
          "value": "Commodities & energy",
        },
        {
          "label": "Worst instrument",
          "tone": "negative",
          "value": "Crypto",
        },
        {
          "label": "Blended portfolio",
          "tone": "negative",
          "value": "-6.5%",
        },
        {
          "label": "Global real rate",
          "value": "+1.4%",
        },
      ],
      "subtitle": "Real IDR return and sentiment",
    },
    {
      "key": "people",
      "mechanism": "Rent is rising faster than wages. Pay raises are absorbed before they reach any other spending — real purchasing power falls even as nominal wages rise.",
      "name": "Households",
      "score": -84.33823056521207,
      "stats": [
        {
          "label": "Felt inflation",
          "sub": "official 9.8%",
          "tone": "positive",
          "value": "10.5%",
        },
        {
          "label": "Effective real wage",
          "tone": "negative",
          "value": "-5.0%",
        },
        {
          "label": "Rent vs wages",
          "tone": "negative",
          "value": "+0.2 pp",
        },
        {
          "label": "Unemployment",
          "sub": "underemployment 35.8%",
          "value": "8.1%",
        },
        {
          "label": "Consumer loan rate",
          "value": "9.5%",
        },
        {
          "label": "Real savings return",
          "tone": "negative",
          "value": "-4.6%",
        },
      ],
      "subtitle": "Purchasing power, jobs, cost of living",
    },
  ],
  "state": {
    "costCapital": -0.0824176351966976,
    "costGrowth": 16.402526123921373,
    "costImport": 10.33386177561904,
    "costLabor": 2.145,
    "costOfFunds": 9.389305175527927,
    "costRent": 0.5676202603105882,
    "cpiBottom": 10.491401351321338,
    "credibility": 58.948414673142885,
    "debtNext": 46.20416508909419,
    "deficitActual": 8.959488333814933,
    "feltGap": 0.667224999354362,
    "flow": -92.97683918426421,
    "flowParts": [
      {
        "contribution": -20.896705407867906,
        "label": "Real carry (domestic vs global real rate)",
        "raw": "-5.2 pp",
      },
      {
        "contribution": -12.407604720495357,
        "label": "Growth differential",
        "raw": "-4.1 pp",
      },
      {
        "contribution": -22.400000000000002,
        "label": "Global risk appetite",
        "raw": "22/100",
      },
      {
        "contribution": -15.400000000000002,
        "label": "Dollar strength (DXY)",
        "raw": "+7.0%",
      },
      {
        "contribution": -8.400000000000002,
        "label": "Net terms of trade",
        "raw": "-10.5 idx",
      },
      {
        "contribution": 1,
        "label": "FX reserve adequacy",
        "raw": "6.5 mo",
      },
      {
        "contribution": -0,
        "label": "Corporate FX debt",
        "raw": "12.0% GDP",
      },
      {
        "contribution": -14.472529055900928,
        "label": "Domestic nominal stability",
        "raw": "gap +6.8 pp",
      },
    ],
    "foodInfl": 17.196919310811705,
    "fuelPrice": 3.7564481658571394,
    "fxDebtHit": 5.1574064858666535,
    "fxStress": 12.503170653714228,
    "g": -2.935868240165119,
    "gPot": 5,
    "gap": -7.935868240165119,
    "idr": -18.41930887809519,
    "interestBurden": 4.934623232447207,
    "jobGrowth": -1.8147275320908156,
    "kpr": 9.5,
    "marginDelta": -9.514218012119516,
    "nim": 3.3200000000000003,
    "nomRev": 6.888308111801857,
    "npl": 9.699323161954023,
    "pi": 9.824176351966976,
    "piGap": 6.824176351966976,
    "r": 0.5,
    "rEx": -3.824176351966976,
    "rG": 1.4,
    "realCredit": -9.285413709936844,
    "realWage": -4.324176351966976,
    "realWageFelt": -4.991401351321338,
    "rentBurden": 0.17620260310588165,
    "rentGrowth": 5.676202603105882,
    "savingsReal": -4.574176351966976,
    "sbnYield": 12.336558081118017,
    "spendingWeightSource": "default",
    "subsidyCost": 2.881934449757142,
    "taylor": 11.468330407867903,
    "u": 8.121970565680957,
    "ulc": 3.9,
    "underemp": 35.838149656313725,
  },
}
`;

exports[`solveMacro — golden snapshots > matches the BASE scenario snapshot 1`] = `
{
  "drivers": {
    "commod": 5,
    "debtRatio": 40,
    "deficit": 2.5,
    "dxy": 0,
    "fxDebt": 12,
    "gG": 3,
    "i": 4.75,
    "iFed": 4,
    "informal": 58,
    "oil": 0,
    "piG": 2.6,
    "pie": 2.4,
    "prod": 1.6,
    "reserves": 6.5,
    "riskOn": 55,
    "shock": 0,
    "subsidy": 60,
    "target": 3,
    "w": 5.5,
  },
  "flowNarrative": "Moderate inflows. Foreign investors add SBN first — liquid and easy to size — before rotating into equities.",
  "instruments": [
    {
      "beta": 1,
      "category": "Domestic",
      "driver": "Nominal earnings, foreign flow",
      "flag": null,
      "name": "Indonesian equities (IHSG)",
      "realReturnPct": 8.80147856,
      "sentiment": 66.482365696,
    },
    {
      "beta": 0.9,
      "category": "Global",
      "driver": "Global growth, FX",
      "flag": null,
      "name": "Global equities (DM)",
      "realReturnPct": 4.6321128400000005,
      "sentiment": 59.57138054400001,
    },
    {
      "beta": 0.2,
      "category": "Domestic",
      "driver": "Yield curve, fiscal risk",
      "flag": null,
      "name": "Government bonds (SBN)",
      "realReturnPct": 2.62960016,
      "sentiment": 54.687360256,
    },
    {
      "beta": 0.4,
      "category": "Domestic",
      "driver": "Rent, mortgage rates",
      "flag": null,
      "name": "Property",
      "realReturnPct": 1.9228326999999998,
      "sentiment": 54.03653232,
    },
    {
      "beta": 1.6,
      "category": "Global",
      "driver": "Global liquidity, risk appetite",
      "flag": null,
      "name": "Crypto (BTC)",
      "realReturnPct": 1.5521128400000004,
      "sentiment": 56.323380544,
    },
    {
      "beta": -0.5,
      "category": "Global",
      "driver": "Fed funds rate, safe haven",
      "flag": null,
      "name": "US Treasuries (UST)",
      "realReturnPct": 1.3121128400000002,
      "sentiment": 50.899380543999996,
    },
    {
      "beta": -0.1,
      "category": "Domestic",
      "driver": "Domestic real rate",
      "flag": null,
      "name": "IDR deposits",
      "realReturnPct": 0.875642,
      "sentiment": 51.1610272,
    },
    {
      "beta": 0.7,
      "category": "Global",
      "driver": "Terms of trade, global cycle",
      "flag": null,
      "name": "Commodities & energy",
      "realReturnPct": 0.6021128400000002,
      "sentiment": 52.643380544,
    },
    {
      "beta": -0.7,
      "category": "Global",
      "driver": "Fed funds rate, FX",
      "flag": null,
      "name": "USD cash",
      "realReturnPct": 0.40211284,
      "sentiment": 48.963380544,
    },
    {
      "beta": -0.4,
      "category": "Global",
      "driver": "Global real rate (inverse)",
      "flag": null,
      "name": "Gold",
      "realReturnPct": -2.56788716,
      "sentiment": 44.931380544,
    },
  ],
  "portfolio": {
    "investorScore": 32.879259018,
    "realReturnPct": 3.6532510019999997,
  },
  "regime": {
    "regime": "Goldilocks",
    "regimeNote": "Inflation is near target and output is near potential.",
  },
  "stakeholders": [
    {
      "key": "cb",
      "mechanism": "Both sides of the mandate are satisfied. Focus shifts to financial-system stability and rebuilding policy space.",
      "name": "Central bank",
      "score": 99.933767763508,
      "stats": [
        {
          "label": "Deviation from target",
          "tone": "positive",
          "value": "+0.1 pp",
        },
        {
          "label": "Credibility",
          "sub": "from expectation anchoring",
          "value": "93/100",
        },
        {
          "label": "Taylor rule",
          "sub": "actual 4.8%",
          "tone": "positive",
          "value": "5.4%",
        },
        {
          "label": "FX stress",
          "tone": "positive",
          "value": "0.0",
        },
      ],
      "subtitle": "Prices, output, and FX stability",
    },
    {
      "key": "bank",
      "mechanism": "Healthy intermediation: credit demand grows, NPLs are contained, margins are stable.",
      "name": "Commercial banks",
      "score": 32.09982008000001,
      "stats": [
        {
          "label": "Net interest margin",
          "value": "3.0%",
        },
        {
          "label": "Cost of funds",
          "value": "5.3%",
        },
        {
          "label": "Real credit growth",
          "value": "+11.3%",
        },
        {
          "label": "NPL ratio",
          "tone": "positive",
          "value": "2.0%",
        },
      ],
      "subtitle": "Margin, volume, asset quality",
    },
    {
      "key": "corp",
      "mechanism": "Nominal growth outruns cost growth. Cost of capital is reasonable, the investment window is open.",
      "name": "Corporates",
      "score": 29.834785640000003,
      "stats": [
        {
          "label": "Nominal revenue growth",
          "value": "+8.2%",
        },
        {
          "label": "Labor cost",
          "sub": "ULC +3.9%",
          "value": "+2.1 pp",
        },
        {
          "label": "Import + energy cost",
          "tone": "positive",
          "value": "+0.0 pp",
        },
        {
          "label": "Rent & land cost",
          "value": "+0.4 pp",
        },
        {
          "label": "FX debt hit",
          "tone": "positive",
          "value": "+0.0 pp",
        },
        {
          "label": "Margin change",
          "tone": "positive",
          "value": "+4.1 pp",
        },
      ],
      "subtitle": "Margin, input costs, FX debt burden",
    },
    {
      "key": "gov",
      "mechanism": "A sustainable fiscal position. Nominal growth outruns the interest bill, and the debt ratio falls on its own.",
      "name": "Government",
      "score": 39.5471148,
      "stats": [
        {
          "label": "Actual deficit",
          "tone": "positive",
          "value": "2.5%",
        },
        {
          "label": "Energy subsidy cost",
          "tone": "positive",
          "value": "0.9% GDP",
        },
        {
          "label": "Interest burden",
          "tone": "positive",
          "value": "2.3% GDP",
        },
        {
          "label": "Next year's debt ratio",
          "sub": "now 40.0%",
          "tone": "positive",
          "value": "39.2%",
        },
      ],
      "subtitle": "Budget, debt, subsidies",
    },
    {
      "key": "inv",
      "mechanism": "Risk premia are being paid fairly. Equities lead, bonds provide a positive real cushion.",
      "name": "Investors",
      "score": 32.879259018,
      "stats": [
        {
          "label": "Best instrument",
          "tone": "positive",
          "value": "Indonesian equities",
        },
        {
          "label": "Worst instrument",
          "tone": "negative",
          "value": "Gold",
        },
        {
          "label": "Blended portfolio",
          "tone": "positive",
          "value": "+3.7%",
        },
        {
          "label": "Global real rate",
          "value": "+1.4%",
        },
      ],
      "subtitle": "Real IDR return and sentiment",
    },
    {
      "key": "people",
      "mechanism": "Purchasing power is rising and the labor market is tight. Worker bargaining power is at its peak.",
      "name": "Households",
      "score": 22.001694984,
      "stats": [
        {
          "label": "Felt inflation",
          "sub": "official 3.1%",
          "tone": "positive",
          "value": "3.2%",
        },
        {
          "label": "Effective real wage",
          "tone": "positive",
          "value": "+2.3%",
        },
        {
          "label": "Rent vs wages",
          "tone": "positive",
          "value": "-1.6 pp",
        },
        {
          "label": "Unemployment",
          "sub": "underemployment 20.8%",
          "value": "5.0%",
        },
        {
          "label": "Consumer loan rate",
          "value": "8.3%",
        },
        {
          "label": "Real savings return",
          "tone": "positive",
          "value": "+0.9%",
        },
      ],
      "subtitle": "Purchasing power, jobs, cost of living",
    },
  ],
  "state": {
    "costCapital": 0.46256420000000004,
    "costGrowth": 4.09315098,
    "costImport": 0,
    "costLabor": 2.145,
    "costOfFunds": 5.35,
    "costRent": 0.39206147999999996,
    "cpiBottom": 3.241039936,
    "credibility": 92.8,
    "debtNext": 39.1640068,
    "deficitActual": 2.45975,
    "feltGap": 0.11668193599999999,
    "flow": 14.047568000000002,
    "flowParts": [
      {
        "contribution": 0.9025680000000005,
        "label": "Real carry (domestic vs global real rate)",
        "raw": "+0.2 pp",
      },
      {
        "contribution": 6.345000000000001,
        "label": "Growth differential",
        "raw": "+2.1 pp",
      },
      {
        "contribution": 4,
        "label": "Global risk appetite",
        "raw": "55/100",
      },
      {
        "contribution": -0,
        "label": "Dollar strength (DXY)",
        "raw": "+0.0%",
      },
      {
        "contribution": 1.7999999999999998,
        "label": "Net terms of trade",
        "raw": "+2.3 idx",
      },
      {
        "contribution": 1,
        "label": "FX reserve adequacy",
        "raw": "6.5 mo",
      },
      {
        "contribution": -0,
        "label": "Corporate FX debt",
        "raw": "12.0% GDP",
      },
      {
        "contribution": -0,
        "label": "Domestic nominal stability",
        "raw": "gap +0.1 pp",
      },
    ],
    "foodInfl": 3.72898,
    "fuelPrice": 0,
    "fxDebtHit": 0,
    "fxStress": 0,
    "g": 5.115,
    "gPot": 5,
    "gap": 0.11500000000000007,
    "idr": 0.22352916000000017,
    "interestBurden": 2.3463521439999995,
    "jobGrowth": 2.6132500000000003,
    "kpr": 8.25,
    "marginDelta": 4.146207019999999,
    "nim": 3.045,
    "nomRev": 8.239358,
    "npl": 2,
    "pi": 3.124358,
    "piGap": 0.12435799999999997,
    "r": 2.35,
    "rEx": 1.625642,
    "rG": 1.4,
    "realCredit": 11.306736400000002,
    "realWage": 2.375642,
    "realWageFelt": 2.258960064,
    "rentBurden": -1.5793852000000004,
    "rentGrowth": 3.9206147999999996,
    "savingsReal": 0.875642,
    "sbnYield": 5.865880359999999,
    "spendingWeightSource": "default",
    "subsidyCost": 0.9,
    "taylor": 5.444037000000001,
    "u": 4.966259,
    "ulc": 3.9,
    "underemp": 20.759999999999998,
  },
}
`;
